--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
                 <div id="branding">
-                    <h1 class="h3"><span class="text-warning">José Carlos</span> Portfólio</h1>
+                    <h1 class="h3"><span id="nome-brand"class="text-warning"></span> Portfólio</h1>
                 </div>
                 <nav>
                     <ul class="nav">
@@ -37,11 +37,11 @@
         <div class="container">
             <div class="d-flex flex-column flex-md-row align-items-center">
                 <div class="home-image me-md-4 mb-4 mb-md-0">
-                    <img src="Foto_perfil.jpeg" class="img-fluid rounded" alt="Descrição da Imagem">
+                    <img src="assets/img/Foto_perfil.jpeg" class="img-fluid rounded" alt="Descrição da Imagem">
                 </div>
                 <div class="home-text text-center text-md-start">
                     <h1>Bem-vindo ao Meu Portfólio</h1>
-                    <p>Olá! Sou um desenvolvedor web apaixonado por criar experiências digitais memoráveis. Confira meu trabalho abaixo.</p>
+                    <p>Olá! Sou professor e desenvolvedor web apaixonado por criar experiências digitais memoráveis. Confira meu trabalho abaixo.</p>
                 </div>
             </div>
         </div>
@@ -55,8 +55,8 @@
                     <h3>Escolaridade</h3>
                     <ul class="list-unstyled">
                         <li>
-    <strong>Graduação:</strong> Bacharel em Analise e Desenvolvimento de Sistemas - Cesumar Londrina
-         </li>
+                            <strong>Graduação:</strong> Bacharel em Analise e Desenvolvimento de Sistemas - Cesumar Londrina
+                        </li>
                         <li><strong>Mestrado:</strong> Engenharia Mecatrônica - UTF-PR</li>
                     </ul>
                 </div>
@@ -111,6 +111,7 @@
             <!-- Adicione mais imagens conforme necessário -->
         </div>
     </section>
-    <script src="classes.js"></script>
+    <script src="assets/js/classes.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
