--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio José Carlos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
+
 <body>
     <header class="bg-dark text-white py-1">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
                 <div id="branding">
-                    <h1 class="h3"><span id="nome-brand"class="text-warning"></span> Portfólio</h1>
+                    <h1 class="h3"><span id="nome-brand" class="text-warning"></span> Portfólio</h1>
                 </div>
                 <nav>
                     <ul class="nav">
@@ -34,14 +37,15 @@
     </header>
 
     <section id="home" class="my-5">
-        <div class="container">
+        <div class="container shadow rounded p-3">
             <div class="d-flex flex-column flex-md-row align-items-center">
                 <div class="home-image me-md-4 mb-4 mb-md-0">
                     <img src="assets/img/Foto_perfil.jpeg" class="img-fluid rounded" alt="Descrição da Imagem">
                 </div>
                 <div class="home-text text-center text-md-start">
                     <h1>Bem-vindo ao Meu Portfólio</h1>
-                    <p>Olá! Sou professor e desenvolvedor web apaixonado por criar experiências digitais memoráveis. Confira meu trabalho abaixo.</p>
+                    <p>Olá! Sou professor e desenvolvedor web apaixonado por criar experiências digitais memoráveis.
+                        Confira meu trabalho abaixo.</p>
                 </div>
             </div>
         </div>
@@ -51,16 +55,14 @@
         <div class="container">
             <h2 class="text-center mb-4">Sobre Mim</h2>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 shadow-sm rounded p-3">
                     <h3>Escolaridade</h3>
                     <ul class="list-unstyled">
-                        <li>
-                            <strong>Graduação:</strong> Bacharel em Analise e Desenvolvimento de Sistemas - Cesumar Londrina
-                        </li>
-                        <li><strong>Mestrado:</strong> Engenharia Mecatrônica - UTF-PR</li>
+                        <li><strong>Graduação:</strong> Bacharel em Análise e Desenvolvimento de Sistemas - Cesumar Londrina </li>
+                        <li><strong>Graduação:</strong> Licenciatura Matemática - Unopar Apucarana</li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 shadow-sm rounded p-3">
                     <h3>Cursos</h3>
                     <ul class="list-unstyled">
                         <li>Desenvolvimento Web Completo - Curso Online</li>
@@ -68,7 +70,7 @@
                         <li>Design de Interfaces - Workshop</li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 shadow-sm rounded p-3">
                     <h3>Habilidades e Competências</h3>
                     <ul class="list-unstyled">
                         <li>Trabalho em equipe e colaboração</li>
@@ -108,10 +110,44 @@
                     </div>
                 </div>
             </div>
-            <!-- Adicione mais imagens conforme necessário -->
         </div>
     </section>
+
+    <section id="contact">
+        <div class="row">
+            <div class="col">
+                <ul>
+                    <li><a href=""><img src="" alt=""></a></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="col"></div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+
+                <div class="col">
+                    <ul>
+                        <li><a href=""><img src="" alt=""></a></li>
+                        <li></li>
+                    </ul>
+                </div>
+
+                <div class="col"></div>
+               
+
+
+            </div>
+        </div>
+    </section>
+    
     <script src="assets/js/classes.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
